# multiStageAlignment

./: CMakeLists.txt
app/: CMakeLists.txt
app/include/: multistage_alignement.h  parameters.h
app/src/: main.cpp  parameters.cpp
